Bug 870941: Remove CSS rules for overlay scrollbars that became unnecessary. r=roc
UltraBlame original commit: ad419a65b8dce5eb6d85da6e73ea3beaf8432799

--- a/toolkit/themes/osx/global/nativescrollbars.css
+++ b/toolkit/themes/osx/global/nativescrollbars.css
@@ -211,19 +211,6 @@ scrollbars
 )
 {
 scrollbar
-{
-position
-:
-relative
-;
-z
--
-index
-:
-2147483647
-;
-}
-scrollbar
 :
 not
 (
